--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ['10.x', '12.x', '14.x']
-        os: ubuntu-latest
+        node: ['12.x', '14.x']
 
     steps:
       - name: Checkout repo
