--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/react-dom": "^17.0.9",
     "husky": "^7.0.0",
     "msw": "^0.35.0",
+    "postcss": "^8.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rollup-plugin-postcss": "^4.0.1",
