--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: CI
 on: [push]
 jobs:
   build:
-    name: Build, lint, and test on Node ${{ matrix.node }} and ${{ matrix.os }}
+    name: Build and lint on Node ${{ matrix.node }} and ${{ matrix.os }}
 
     runs-on: ubuntu-latest
     strategy:
@@ -23,9 +23,6 @@ jobs:
 
       - name: Lint
         run: yarn lint
-
-      - name: Test
-        run: yarn test --ci --coverage --maxWorkers=2
 
       - name: Build
         run: yarn build
