--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "license": "MIT",
   "homepage": "https://github.com/stordco/msw-toolbar",
   "repository": "https://github.com/stordco/msw-toolbar.git",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
   "files": [
     "dist",
     "src"
   ],
+  "main": "dist/msw-toolbar.cjs.js",
+  "module": "dist/msw-toolbar.esm.js",
+  "typings": "dist/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
@@ -41,18 +42,18 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "module": "dist/msw-toolbar.esm.js",
   "size-limit": [
     {
-      "path": "dist/msw-toolbar.cjs.production.min.js",
+      "path": "dist/msw-toolbar.es.js",
       "limit": "4 KB"
     },
     {
-      "path": "dist/msw-toolbar.esm.js",
+      "path": "dist/msw-toolbar.cjs.js",
       "limit": "4 KB"
     }
   ],
   "devDependencies": {
+    "@rollup/plugin-typescript": "^8.3.0",
     "@size-limit/preset-small-lib": "^5.0.4",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
@@ -65,6 +66,7 @@
     "size-limit": "^5.0.4",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "vite": "^2.6.14"
   }
 }
