--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^5.0.4",
+    "@tailwindcss/forms": "^0.3.4",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "husky": "^7.0.0",
@@ -63,6 +64,7 @@
     "react-dom": "^17.0.2",
     "rollup-plugin-postcss": "^4.0.1",
     "size-limit": "^5.0.4",
+    "tailwindcss": "^2.2.19",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
