--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     }
   ],
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.0",
     "@size-limit/preset-small-lib": "^5.0.4",
-    "@tailwindcss/forms": "^0.3.4",
+    "@svgr/rollup": "^6.1.1",
+    "@tailwindcss/forms": "^0.4.0-alpha.2",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "husky": "^7.0.0",
@@ -64,7 +66,7 @@
     "react-dom": "^17.0.2",
     "rollup-plugin-postcss": "^4.0.1",
     "size-limit": "^5.0.4",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "^3.0.0-alpha.2",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
