--- a/package.json
+++ b/package.json
@@ -56,9 +56,10 @@
     "@babel/preset-typescript": "^7.16.0",
     "@size-limit/preset-small-lib": "^5.0.4",
     "@svgr/rollup": "^6.1.1",
-    "@tailwindcss/forms": "^0.4.0-alpha.2",
+    "@tailwindcss/forms": "^0.4.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "autoprefixer": "^10.4.0",
     "husky": "^7.0.0",
     "msw": "^0.35.0",
     "postcss": "^8.3.7",
@@ -66,7 +67,7 @@
     "react-dom": "^17.0.2",
     "rollup-plugin-postcss": "^4.0.1",
     "size-limit": "^5.0.4",
-    "tailwindcss": "^3.0.0-alpha.2",
+    "tailwindcss": "^3.0.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
