--- a/.github/workflows/gh-packages-release.yml
+++ b/.github/workflows/gh-packages-release.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           cache: 'npm'
-          node-version: '14'
+          node-version-file: .tool-versions
           registry-url: 'https://npm.pkg.github.com'
           # Defaults to the user or organization that owns the workflow file
           scope: '@stordco'
