--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,7 @@ on: [push]
 jobs:
   build:
     name: Build and lint on Node ${{ matrix.node }} and ${{ matrix.os }}
-
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: ['12.x', '14.x']
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -16,7 +11,7 @@ jobs:
       - name: Use Node ${{ matrix.node }}
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node }}
+          node-version-file: .tool-versions
 
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
